--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,13 @@ nav li {
 nav {
   background: #ebda8c; }
 
+nav a {
+  text-decoration: none; }
+
+nav li a:visited, nav a:link, nav a:active {
+  color: #000000;
+  text-decoration: none; }
+
 .content a img {
   outline: 4px solid black;
   margin: 1%; }
