Info panel working on mobile

--- a/css/laptop.scss
+++ b/css/laptop.scss
@@ -6,7 +6,7 @@ body {
 
 header {
     width: 100%;
-    background: url(../images/saigon.jpg) no-repeat center center;
+    background: url(../images/Saigon.jpg) no-repeat center center;
     background-size: 100%;
     padding-top: 15%;
     outline: 3px solid black;
