--- a/css/main.scss
+++ b/css/main.scss
@@ -44,3 +44,11 @@ nav li a:visited, nav a:link, nav a:active {
     text-align: center;
     margin-top: 2%;
 }
+
+aside {
+    display: none;
+}
+
+aside.is-expanded {
+    display: block;
+}
