--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ header {
     background: $mid-yellow;
 }
 
-h1 {font-family: $header-font; }
+h1 , h2 {font-family: $logo-font; }
 
 nav li {
     font-family: $logo-font;
@@ -51,4 +51,5 @@ aside {
 
 aside.is-expanded {
     display: block;
+    margin: 2%;
 }
