Added sample information

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
 body {
   background: #ebda8c; }
 
@@ -23,13 +28,14 @@ nav li a:visited, nav a:link, nav a:active {
   color: #000000;
   text-decoration: none; }
 
-.content a img {
+a img {
   outline: 4px solid black;
   margin: 1%; }
 
 .content {
   text-align: center;
-  margin-top: 2%; }
+  margin-top: 2%;
+  clear: both; }
 
 aside {
   display: none; }
@@ -37,3 +43,23 @@ aside {
 aside.is-expanded {
   display: block;
   margin: 2%; }
+
+aside .photo-block {
+  clear: both; }
+
+aside .photo-image {
+  float: left;
+  margin-bottom: 1%; }
+
+aside .photo-description {
+  float: left;
+  width: 68%;
+  margin-left: 2%; }
+
+aside .photo-description h2 {
+  margin-top: 0%;
+  margin-bottom: 0%; }
+
+aside .photo-description p {
+  margin-top: 0%;
+  margin-bottom: 0%; }
