--- a/css/phone.css
+++ b/css/phone.css
@@ -1,6 +1,3 @@
-* {
-  box-sizing: border-box; }
-
 header, nav {
   width: 100%; }
 
@@ -51,16 +48,29 @@ header {
   padding-bottom: 17%; }
 
 nav {
-  height: 0px;
+  height: 0.5px;
   overflow: hidden;
   width: 100%;
+  background: #2e3034;
   outline: 1px solid #2e3034;
-  webkit-transition: height 1s; }
+  padding-bottom: 0px;
+  -webkit-transition: padding-bottom 1s; }
 
 nav.is-expanded {
+  background: #ebda8c;
   margin: 0px;
   height: 0px;
   padding-bottom: 39%; }
 
 a.large {
   display: none; }
+
+aside .photo-image {
+  width: 25%; }
+
+aside .photo-image img {
+  width: 100%; }
+
+aside .photo-description {
+  width: 70%;
+  margin-bottom: 6%; }
