--- a/css/contentslider.scss
+++ b/css/contentslider.scss
@@ -50,8 +50,8 @@ body {
     float: left;
 }
 
-.sliderwrapper h2 {
-    float: left;
+.sliderwrapper h2,h1 {
+
     color: $pale-gray;
     font-family: sans-serif;
     font-size: large;
@@ -82,14 +82,66 @@ body {
     background-color: $dark-mid-gray;
 }
 
-.n5thumbs img {
-    width: 166px;
+.n5thumbs  img { width: 166px; }
+.n6thumbs  img { width: 142px; }
+.n7thumbs  img { width: 124px; }
+.n8thumbs  img { width: 109px; }
+.n9thumbs  img { width:  98px; }
+.n10thumbs img { width:  89px; }
+.n11thumbs img { width:  81px; }
+.n12thumbs img { width:  74px; }
+.n13thumbs img { width:  69px; }
+.n14thumbs img { width:  64px; }
+
+
+#infoheader {
+    background: url(../images/Saigon.jpg);
+    background-size: 100%;
+    height: 154px;
+    margin-bottom: 7px;
 }
 
-.n6thumbs  img {
-    width: 142px
+nav {
+    background: none;
+    padding-top: 115px;
 }
 
-.n13thumbs img {
-    width: 69px;
+nav ul {
+    padding-left: 2%;
+}
+
+
+nav ul li {
+    display: inline;
+    margin-right: 2%;
+}
+
+nav ul a {
+    text-decoration: none;
+}
+
+nav ul a:visited, nav ul a:link, nav ul a:active {
+    color: #000000;
+    text-decoration: none;
+}
+
+.galleryinfo {
+    height: 550px;
+    width: 1024px;
+    position: absolute;
+    border-top: 5px;
+
+}
+
+.galleryinfo h2 {
+    clear: both;
+}
+
+.galleryinfo .textpanel {
+    color: $pale-gray
+}
+
+.samplepic {
+    height: 525px;
+    float: left;
 }
