--- a/css/main.css
+++ b/css/main.css
@@ -1,65 +1,1 @@
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-
-body {
-  background: #ebda8c; }
-
-header {
-  background: #e3c13c; }
-  header #logo {
-    font-family: Papyrus, fantasy; }
-
-h1, h2 {
-  font-family: Papyrus, fantasy; }
-
-nav li {
-  font-family: Papyrus, fantasy;
-  /* background: $pale-yellow; */ }
-
-nav {
-  background: #ebda8c; }
-
-nav a {
-  text-decoration: none; }
-
-nav li a:visited, nav a:link, nav a:active {
-  color: #000000;
-  text-decoration: none; }
-
-a img {
-  outline: 4px solid black;
-  margin: 1%; }
-
-.content {
-  text-align: center;
-  margin-top: 2%;
-  clear: both; }
-
-aside {
-  display: none; }
-
-aside.is-expanded {
-  display: block;
-  margin: 2%; }
-
-aside .photo-block {
-  clear: both; }
-
-aside .photo-image {
-  float: left;
-  margin-bottom: 1%; }
-
-aside .photo-description {
-  float: left;
-  width: 68%;
-  margin-left: 2%; }
-
-aside .photo-description h2 {
-  margin-top: 0%;
-  margin-bottom: 0%; }
-
-aside .photo-description p {
-  margin-top: 0%;
-  margin-bottom: 0%; }
+/Users/iain/Code/soulflyer/css/main.css
