--- a/css/portrait.css
+++ b/css/portrait.css
@@ -1,1 +1,13 @@
-/Users/iain/Code/soulflyer/css/portrait.css
+.container {
+  background: url(../images/IMG_5558.jpg) no-repeat center;
+  background-size: 96%;
+  height: 0px;
+  padding-bottom: 129%;
+  /* background-position-y: 94%; */ }
+
+.content {
+  background: url(../images/IMG_5558.jpg) no-repeat center;
+  background-size: 100%;
+  height: 0px;
+  padding-bottom: 129%;
+  margin-top: 0px; }
